Fixed URL Routing for 4-1-4 problem
Grouped routes with same number of parent arg's.
1 (string) for index and history
2 (string and pk) for rental_detail and refurbished_detail

Removed DetailView class based generic view, because it only
accepts a single pk (at least without going thru the trouble to
change that). Replaced with a normal view method detail() which
takes pk's for both the bike and the transaction.

--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -87,8 +87,8 @@
         {% endfor %}
 </table>
 
-<a class="btn btn-default" href="{% url 'app:'|add:parent_url  %}" id="back" role="button">Back</a>
-<a class="btn btn-default" href="{% url 'app:edit' transaction.id parent_url %}" role="button">Edit</a>
+<a class="btn btn-default" href="{% url 'app:'|add:parent_url %}" id="back" role="button">Back</a>
+<a class="btn btn-default" href="{% url 'app:edit_1' parent_url transaction.id %}" role="button">Edit</a>
 
 {% endblock %}
 
