--- a/app/templates/app/rental_detail.html
+++ b/app/templates/app/rental_detail.html
@@ -9,11 +9,14 @@
     {% for transaction in transactions %}
         <tr>
             <td>{{ transaction.id }}</td>
-            <td><a href="{% url 'app:detail' transaction.id 'rental' %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
+
+            <td><a href="{% url 'app:rental_detail_trans_detail' 1 transaction.id %}">{{ transaction.first_name }}
+                {{ transaction.last_name }}</a>
+            </td>
+
             <td>{{ transaction.email }}</td>
             <td>
                 {{ transaction.service_description|slice:":75" }}
-                {% if transaction.service_description|length > 75  %}...{% endif %}
             </td>
         </tr>
     {% endfor %}
