Made navigation work correctly for views.update().
Need to apply to the other 3 views- mark_as_completed, assign_tasks, and
assign_parts.

There are two paths to any of these 4 endpoints. Take edit as an example:

1) The one-arg parent path:

index
<parent_url>/<trans_pk>/detail/      	// In index.html set parent_url & trans_pk
<parent_url>/<trans_pk>/edit/

2) The two-arg parent path:

<bike_pk>/rental_detail
<bike_pk>/<parent_url>/<trans_pk>/detail	// In rental_detail.html, set
<bike_pk>/<parent_url>/<trans_pk>/edit		// bike_pk, parent_url, & trans_pk

It so happens that here, you must go thru the detail view to get to the 4 other views. However,
it doesn't matter how you get to the 4 other views. If you could get directly get
from one of the parent pages, such as <bike_pk>/rental_detail, to /edit, the you would have to
have provided the <bike_pk>, <parent_url> = rental_detail, and the <trans_pk>. Therefore
submitting the form would take you back to the detail page with the same keyword arguments,
and from there the back button would take you to <bike_pk>/rental_detail.

--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -2,9 +2,28 @@
 
 {% block detail %}
 
-<a class="btn btn-default" href="{% url 'app:'|add:parent_url|add:'_trans_mark_completed' transaction.id %}" role="button">Mark as completed</a>
-<a class="btn btn-default" href="{% url 'app:'|add:parent_url|add:'_trans_assign_tasks' transaction.id %}" role="button">Assign Tasks</a>
-<a class="btn btn-default" href="{% url 'app:'|add:parent_url|add:'_trans_assign_parts' transaction.id %}" role="button">Assign Parts</a>
+{% if num_parent_args == 1 %}
+<a class="btn btn-default"
+   href="{% url 'app:mark_as_completed_1' parent_url transaction.id %}"
+   role="button">Mark as completed</a>
+<a class="btn btn-default"
+   href="{% url 'app:assign_tasks_1' parent_url transaction.id %}"
+   role="button">Assign Tasks</a>
+<a class="btn btn-default"
+   href="{% url 'app:assign_parts_1' parent_url transaction.id %}"
+   role="button">Assign Parts</a>
+
+{% elif num_parent_args == 2 %}
+<a class="btn btn-default"
+   href="{% url 'app:mark_as_completed_2' bike_pk parent_url transaction.id %}"
+   role="button">Mark as completed</a>
+<a class="btn btn-default"
+   href="{% url 'app:assign_tasks_2' bike_pk parent_url transaction.id %}"
+   role="button">Assign Tasks</a>
+<a class="btn btn-default"
+   href="{% url 'app:assign_parts_2' bike_pk parent_url transaction.id %}"
+   role="button">Assign Parts</a>
+{% endif %}
 
 
 {% endblock %}
