Almost done with 4-1-4 navigation
Finished navigation for mark_as_completed, assign_tasks, assign_parts

Fixed refurbished_detail view & template, was missing the bike_pk
in the link to /detail.

TODO: Fix the detail page to detail_complete for completed transactions
which are reached from the rental/refurbished pages

--- a/app/templates/app/refurbished_detail.html
+++ b/app/templates/app/refurbished_detail.html
@@ -9,7 +9,7 @@
     {% for transaction in transactions %}
         <tr>
             <td>{{ transaction.id }}</td>
-            <td><a href="{% url 'app:detail' transaction.id 'refurbished' %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
+            <td><a href="{% url 'app:detail_2' bike_pk 'refurbished_detail' transaction.id  %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
             <td>{{ transaction.email }}</td>
             <td>
                 {{ transaction.service_description|slice:":75" }}
