--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -23,3 +23,21 @@
 .input-group > .form-control {
     width: 100%
 }
+
+.topbar {
+    text-align: center;
+}
+
+.topbar img {
+    width: 50%;
+    height: auto;
+}
+
+.btn.btn-skinny{
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.table.trans_table tr{
+    font-size: 16px;
+}
