--- a/app/templates/app/history.html
+++ b/app/templates/app/history.html
@@ -6,11 +6,10 @@
 
     <h3>Past Customers</h3>
 
-    <table class="table">
+    <table class="table trans_table">
     <thead>
         <td>ID</td>
         <td>Name</td>
-        <td>Email</td>
         <td>Service Description</td>
     </thead>
 
@@ -19,7 +18,6 @@
             <td>{{ transaction.id }}</td>
             <td><a href="{% url 'app:detail_1' 'history' transaction.id %}">
                 {{ transaction.first_name }} {{ transaction.last_name }}</a></td>
-            <td>{{ transaction.email }}</td>
             <td>
                 {{ transaction.service_description|slice:":75" }}
                 {% if transaction.service_description|length > 75  %}...{% endif %}
