--- a/app/templates/app/order.html
+++ b/app/templates/app/order.html
@@ -5,10 +5,13 @@
 <br>
 <form class="form-inline" method="post">
     {% csrf_token %}
-    <a class="btn btn-default btn-xlarge" href="{% url 'app:make_order' %}"  role="button" name='new_payment'>Make Order</a>
-    <a class="btn btn-default btn-xlarge" href="{% url 'app:used_parts' %}" role="button">Installed Parts</a>
-    <a class="btn btn-default btn-xlarge" href="{% url 'app:index' %}" role="button">Transactions</a>
-    <input class="btn btn-default btn-xlarge" type="submit" value='Export' name="export_orders">
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+        <a class="btn btn-default btn-lg" href="{% url 'app:make_order' %}"  role="button" name='new_payment'>Make Order</a>
+        <a class="btn btn-default btn-lg" href="{% url 'app:used_parts' %}" role="button">Installed Parts</a>
+        <a class="btn btn-default btn-lg" href="{% url 'app:index' %}" role="button">Transactions</a>
+    </div>
+    <br>
+    <input class="btn btn-default btn-lg" type="submit" value='Export' name="export_orders">
 
 </form>
 
