--- a/app/templates/app/rental.html
+++ b/app/templates/app/rental.html
@@ -1,10 +1,10 @@
 {% extends "app/base.html" %}
 
 {% block content %}
-<center>
-<a href="{% url 'app:new_rental' %}" class="btn btn-default btn-xlarge" role="button" name='new_rental'>Add Bike</a>
-<a class="btn btn-default btn-xlarge" href="{% url 'app:index' %}" role="button">Transactions</a>
-</center>
+<div class="btn-group btn-group-justified" role="group" aria-label="...">
+    <a href="{% url 'app:new_rental' %}" class="btn btn-default btn-lg" role="button" name='new_rental'>Add Bike</a>
+    <a class="btn btn-default btn-lg" href="{% url 'app:index' %}" role="button">Transactions</a>
+</div>
 
 {% if rentals %}
     <h3>Rental Bikes</h3>
