Styled balance page
Used bootstrap btn-group div to justify anchor tag link with submit button.
That refers to the "add" and "export" buttons.

Added css @media selector to hide .non-mobile class dom elements. On the balance
page, I hid the Customer column for screen widths < 480px. Iphone5 is 320px in
width.

I removed padding from the add button, so that if someone were to increase the
.button-pic height from 25px to up to about 40px, the add button would still
line up with the Export button.

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -2,7 +2,7 @@
     float:right;
 }
 
-.buttonpic {
+.button-pic {
   width: 25px;
   height: 25px;
   align-self: center;
@@ -24,11 +24,11 @@
     width: 100%
 }
 
-.topbar {
+.top-bar {
     text-align: center;
 }
 
-.topbar img {
+.top-bar img {
     width: 50%;
     height: auto;
 }
@@ -38,6 +38,19 @@
     padding-left: 5px;
 }
 
-.table.trans_table tr{
+.table.trans-table tr{
     font-size: 16px;
+}
+
+#btn-balance-add.btn {
+    padding: 0px 0px;
+}
+
+@media
+only screen and (max-device-width: 480px){
+      /* some CSS here */
+    .non-mobile {
+        display:none;
+    }
+
 }
