--- a/app/templates/app/history.html
+++ b/app/templates/app/history.html
@@ -6,7 +6,7 @@
 
     <h3>Past Customers</h3>
 
-    <table class="table trans_table">
+    <table class="table trans-table">
     <thead>
         <td>ID</td>
         <td>Name</td>
