--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,7 +10,7 @@
 {% if transactions_list %}
     <h3>Active Customers</h3>
 
-    <table class="table trans_table">
+    <table class="table trans-table">
     <thead>
         <td>ID</td>
         <td>Name</td>
