--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -3,9 +3,9 @@
   <head>
     <link href="{% static 'css/bootstrap.min.css' %}"
           rel="stylesheet" media="screen">
-    <link href="{% static 'css/styles.css' %}"
-          rel="stylesheet" media="screen">
     <link href="{% static 'css/bootstrap_extensions.css' %}"
+          rel="stylesheet" media="screen">
+    <link href="{% static 'css/styles.css' %}"
           rel="stylesheet" media="screen">
     <script src="{% static 'js/jquery-2.1.4.min.js' %}"
             type="text/javascript"
@@ -29,24 +29,24 @@
         <a href="{% url 'app:logout' %}" class="btn">Log Out</a><br><br>
         {% endif %}
     </div>
-    <div class="topbar">
-        <img class="buttonpic" src="/app/static/img/RiceBikesLogo.png" alt="Logo"/>
+    <div class="top-bar">
+        <img class="button-pic" src="/app/static/img/RiceBikesLogo.png" alt="Logo"/>
     </div>
     <div class="btn-group btn-group-justified" role="group" aria-label="...">
       {% if home %}
-        <a href="/new" class="btn btn-default btn-lg" role="button" name='new_transaction'>
-          <img class="buttonpic" src="/app/static/img/add.png" alt="New transaction"/>
+        <a href="/new" class="btn btn-default btn-lg btn-skinny" role="button" name='new_transaction'>
+          <img class="button-pic" src="/app/static/img/add.png" alt="New transaction"/>
         </a>
       {% else %}
-        <a href="/" class="btn btn-default btn-lg" role="button" name='home'>
-          <img class="buttonpic" src="/app/static/img/home.png" alt="Home"/>
+        <a href="/" class="btn btn-default btn-lg btn-skinny" role="button" name='home'>
+          <img class="button-pic" src="/app/static/img/home.png" alt="Home"/>
         </a>
       {% endif %}
-        <a href="/history" class="btn btn-default btn-lg" role="button" name='past_transactions'>
-          <img class="buttonpic" src="/app/static/img/clock.png"/>
+        <a href="/history" class="btn btn-default btn-lg btn-skinny" role="button" name='past_transactions'>
+          <img class="button-pic" src="/app/static/img/clock.png"/>
         </a>
-        <a href="/balance" class="btn btn-default btn-lg" role="button" name='balance'>
-          <img class="buttonpic" src="/app/static/img/money.png"/>
+        <a href="/balance" class="btn btn-default btn-lg btn-skinny" role="button" name='balance'>
+          <img class="button-pic" src="/app/static/img/money.png"/>
         </a>
     </div>
     {% block content %}
