--- a/app/templates/app/history.html
+++ b/app/templates/app/history.html
@@ -10,7 +10,7 @@
     <thead>
         <td>ID</td>
         <td>Name</td>
-        <td>Service Description</td>
+        <td>Description</td>
     </thead>
 
     {% for transaction in transactions_list %}
