--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -14,7 +14,7 @@
     <thead>
         <td>ID</td>
         <td>Name</td>
-        <td>Service Description</td>
+        <td>Description</td>
     </thead>
 
     {% for transaction in transactions_list %}
