Fixed assign_tasks view, removed '=' from detail.html
assign_tasks was trying to grab kwargs['bike_pk'] when it didn't exist (when
parent url only had a text arg)

--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -55,9 +55,10 @@
     </table>
     <br>
     <h3><b>Categories:</b></h3>
+
     <table class="table table-striped">
         <thead>
-            <td class="col-sm-3"><b>Category<b/></td>
+            <td class="col-sm-3"><b>Category</b></td>
             <td class="col-sm-1"><b>Price</b></td>
             <td class="col-sm-1"><b>Was Installed</b></td>
             <td class="col-sm-1"><b>Description</b></td>
@@ -68,7 +69,7 @@
             <td> ${{ part_category.price }} </td>
             <td> {{ part_category.was_used }} </td>
             <td>{{ part_category.description }}</td>
-        </tr>=
+        </tr>
     {% endfor %}
     </table>
 
