Styled Assigned Parts Page
Had to put a form group for each field within inline-form, with col-xs-n defined.
The col-xs-n's add up to 12 for each inline-form.

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -38,12 +38,27 @@
     padding-left: 5px;
 }
 
+.btn.btn-tight{
+    padding-right: 2px;
+    padding-left: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
 .table.trans-table tr{
     font-size: 16px;
 }
 
 #btn-balance-add.btn {
     padding: 0px 0px;
+}
+
+.panel-body.parts-panel {
+    background:#666699;
+}
+
+.panel-body.new-part-panel {
+    background:#FFCC99;
 }
 
 @media
