Fixed styling of PartCategories on Edit Page

--- a/app/templates/app/assign_parts.html
+++ b/app/templates/app/assign_parts.html
@@ -84,7 +84,9 @@
 
         <div class="btn-group btn-group-justified" role="group" aria-label="...">
             <div class="btn-group" role="group">
-                <button id="add_form" class="btn btn-default btn-lg" type="button">Add Category</button>
+                <button id="add_form" class="btn btn-default btn-lg" type="button">
+                    <img class="button-pic" src="/app/static/img/add.png" alt="New transaction"/>
+                </button>
             </div>
             <div class="btn-group" role="group">
                 <button type="submit" class="btn btn-default btn-lg">Submit</button>
